Updated draft plots

--- a/HWC Data - Time Series.ipynb
+++ b/HWC Data - Time Series.ipynb
@@ -6477,7 +6477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Banff_RRFW_Month[\"Incident Month\"] = Banff_RRFW_Month.to_datetime(Banff_RRFW_Month.index).Banff_RRFW_Month.to_period(\"M\")\n",
+    "Banff_RRFW_Month[\"Incident Month\"] = Banff_RRFW_Month.to_datetime(Banff_RRFW_Month.index).Banff_RRFW_Month.to_period(\"M\")\n",
     "#Banff_HWI_Month[\"Incident Month\"] = Banff_HWI_Month.to_datetime(Banff_HWI_Month.index).Banff_HWI_Month.to_period(\"M\")\n",
     "\n",
     "Banff_RRFW_Month[\"Incident Month\"] = pd.DatetimeIndex(Banff_RRFW_Month.index).month\n",
